change video sizes

--- a/01-playground/index.html
+++ b/01-playground/index.html
@@ -78,5 +78,6 @@
     </div>
     <script src="scripts.js"></script>
     <script src="changeButtons.js"></script>
+    <script src="changeScreenSize.js"></script>
   </body>
 </html>
