change screen size

--- a/01-playground/index.html
+++ b/01-playground/index.html
@@ -79,5 +79,6 @@
     <script src="scripts.js"></script>
     <script src="changeButtons.js"></script>
     <script src="changeScreenSize.js"></script>
+    <script src="screenRecorder.js"></script>
   </body>
 </html>
