--- a/01-playground/index.html
+++ b/01-playground/index.html
@@ -80,5 +80,6 @@
     <script src="changeButtons.js"></script>
     <script src="changeScreenSize.js"></script>
     <script src="screenRecorder.js"></script>
+    <script src="shareScreen.js"></script>
   </body>
 </html>
