change input output

--- a/01-playground/index.html
+++ b/01-playground/index.html
@@ -81,5 +81,6 @@
     <script src="changeScreenSize.js"></script>
     <script src="screenRecorder.js"></script>
     <script src="shareScreen.js"></script>
+    <script src="inputOutput.js"></script>
   </body>
 </html>
