--- a/01-playground/index.html
+++ b/01-playground/index.html
@@ -48,21 +48,15 @@
         </button>
         <div>
           <label>Select audio input: </label>
-          <select id="audio-input">
-            <option>Option</option>
-          </select>
+          <select id="audio-input"></select>
         </div>
         <div>
           <label>Select audio output: </label>
-          <select id="audio-output">
-            <option>Option</option>
-          </select>
+          <select id="audio-output"></select>
         </div>
         <div>
           <label>Select video input: </label>
-          <select id="video-input">
-            <option>Option</option>
-          </select>
+          <select id="video-input"></select>
         </div>
       </div>
       <div class="videos col-8">
