--- a/signalingPeerConnection/index.html
+++ b/signalingPeerConnection/index.html
@@ -45,5 +45,6 @@
     </div>
   </body>
   <!-- <script src="/socket.io/socket.io.js"></script> -->
+  <script src="stunServers.js"></script>
   <script src="script.js"></script>
 </html>
