client connect with server

--- a/signalingPeerConnection/index.html
+++ b/signalingPeerConnection/index.html
@@ -44,7 +44,7 @@
       </div>
     </div>
   </body>
-  <!-- <script src="/socket.io/socket.io.js"></script> -->
+  <script src="/socket.io/socket.io.js"></script>
   <script src="stunServers.js"></script>
   <script src="script.js"></script>
 </html>
