send out available offers to new users

--- a/signalingPeerConnection/index.html
+++ b/signalingPeerConnection/index.html
@@ -47,4 +47,5 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="stunServers.js"></script>
   <script src="script.js"></script>
+  <script src="socketListeners.js"></script>
 </html>
